...
        : 'please_enter_a_valid_email_address'.i18n,
  );

  @override
  Widget build(BuildContext context) {
    return BaseScreen(
      title: "lantern_pro_checkout".i18n,
      padHorizontal: true,
      padVertical: true,
      body: _buildBody(),
    );
  }

...
          ),
        ),
        const SizedBox(height: 24),
        SizedBox(
          width: double.infinity,
          child: Button(
            text: "continue".i18n,
            onPressed: _onVerifyTap,
            disabled: _emailController.text.isEmpty ||
                _emailFormKey?.currentState?.validate() == false,
          ),
        ),
      ],
...
