...
        ),
        BottomNavigationBarItem(
          icon: CustomBottomItem(
            currentIndex: index,
            position: 2,
            total: isDevelop ? 4 : 3,
            label: Text('Account'.i18n, style: const TextStyle(fontSize: 12)),
            onTap: () => onTap!(2),
            icon: SvgPicture.asset(
              ImagePaths.account_icon,
              color:
                  index == 2 ? selectedTabLabelColor : unselectedTabLabelColor,
              fit: BoxFit.contain,
...
