...
              textAlign: TextAlign.center,
            ),
          ),
          const Spacer(),
          Button(
            width: 200,
            text: 'Link with PIN'.i18n,
            onPressed: () => openLinkDevice(context),
          ),
          const Spacer(),
          Flexible(
            child: LabeledDivider(
              label: 'OR'.i18n,
...
              style: tsBody2,
              textAlign: TextAlign.center,
            ),
          ),
          const Spacer(),
          Button(
            text: 'Link via Email'.i18n,
            secondary: true,
            onPressed: () => openLinkDeviceViaEmail(context),
          ),
          const Spacer(),
        ],
      ),
...
