...
                                      )),
                          ])),
              Container(
                padding: const EdgeInsetsDirectional.only(
                    top: 24, start: 12, end: 12),
                child: CText(
                  'share_lantern_pro'.i18n,
                  textAlign: TextAlign.justify,
                  style: tsBody2,
                ),
              ),
              const Spacer(),
              Container(
                  margin: const EdgeInsetsDirectional.only(bottom: 56),
                  child: Button(
                    width: 200,
                    text: 'share_referral_code'.i18n,
                    onPressed: () async => await Share.share(
                        'share_message_referral_code'
                            .i18n
                            .fill([referralCode])),
                  )),
            ],
...
