...
                        'cannot_sign_in'.i18n,
                        'discover_not_working'.i18n,
                        'spinner_loads_endlessly'.i18n,
                        'slow'.i18n,
                        'cannot_link_devices'.i18n,
                        'application_crashes'.i18n,
                        'other'.i18n
                      ].map<DropdownMenuItem<String>>((String value) {
                        return DropdownMenuItem<String>(
                          value: value,
                          child: CText(value, style: tsBody1),
                        );
                      }).toList(),
...
            const Spacer(),
            Tooltip(
              message: isDesktop() ? '' : AppKeys.sendReport,
              child: Button(
                width: 200,
                disabled: isButtonDisabled(),
                text: 'send_report'.i18n,
                onPressed: onSendReportTap,
              ),
            ),
            if (!Platform.isLinux) ...[
              const SizedBox(
                height: 26.0,
...
