...
        shrinkWrap: true,
        children: [
          //* Language
          ListItemFactory.settingsItem(
            header: 'general'.i18n,
            icon: ImagePaths.translate,
            content: 'language'.i18n,
            onTap: () {
              changeLanguage(context);
            },
            trailingArray: [
              Padding(
                padding: const EdgeInsetsDirectional.only(start: 16, end: 16),
...
                ],
              ),
            ),
          if (isDesktop())
            ListItemFactory.settingsItem(
              icon: ImagePaths.proxySetting,
              content: 'proxy_settings'.i18n,
              trailingArray: [
                mirrorLTR(context: context, child: const ContinueArrow())
              ],
              onTap: () => {openProxySetting(context)},
            ),

...
